--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-I'm still putting in work to keep climbing.
+<html>
+
+	<head>
+	<title> HTML body Bgcolor Attribute </title>
+	</head>
+
+	<body> text="black" bgcolor="pink">
+	<center><br><br><br><br><br><br>
+
+	<h1> Hi All </h1>
+	<h2> 
+
+	 You  are watching YOUTUBE Channel "Info-Tech with Abdul Kamara"
+	<h2>
+
+	</center>
+	</body>
+</html>
